<resources>
    <string name="app_name">MaikaApp</string>
    <string name="button_new_request">New Request</string>
    <string name="button_retry">Retry</string>
    <string name="button_listening">Listening</string>
    <string name="username">Tên tài khoản:</string>
    <string name="password">Mật khẩu:</string>
    <string name="login_text">Đăng nhập</string>
    <string name="login_hint_text"><u>Không có tài khoản? Đăng nhập dưới dạng khách</u></string>
    <string name="maika_bot">Maika Bot</string>
    <string name="teacher_lich_ctac">Lịch công tác</string>
    <string name="can_bo">Cán bộ</string>
    <string name="teacher_lich_hoat_dong">Lịch hoạt động</string>
    <string name="teacher_thong_tin_hs">Thông tin học sinh</string>
    <string name="ten_can_bo">Tên Cán Bộ</string>
    <string name="connect_string">-</string>
    <string name="chuc_vu">Chức vụ</string>
    <string name="hoc_sinh">Học sinh</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="subject_name">Tên môn</string>
    <string name="thoi_khoa_bieu">Thời khóa biểu</string>
    <string name="ten_hoc_sinh">Tên học sinh</string>
    <string name="ten_lop">Tên lớp</string>
    <string name="khach">Khách</string>
    <string name="tim_duong_di">Tìm đường đi</string>
    <string name="gap_can_bo">Gặp cán bộ</string>
    <string name="k_nh_ch_o_qu_kh_ch">Kính chào quý khách</string>
    <string name="thu">Thứ</string>
    <string name="tiet">Tiết</string>
    <string name="mon">Môn</string>
    <string name="lop">Lớp</string>
    <string name="thoi_gian">Thời gian</string>
    <string name="noi_dung">Nội dung</string>
    <string name="dia_diem">Địa điểm</string>
    <string name="to_chuc">Tổ chức</string>
    <string name="hd_di_chuyen">Hướng dẫn di chuyển</string>
    <string name="gap_mat">Gặp mặt cán bộ</string>
    <string name="dia_diem_hien_tai">Địa điểm hiện tại:</string>
    <string name="destination">Vị trí cần tới</string>
    <string name="mo_ta">* Mô tả</string>
    <string name="demo">Demo</string>
    <string name="can_bo_can_gap">Cán bộ cần gặp</string>
    <string name="thong_bao">* Thông báo</string>
    <string name="thong_tin">* Thông tin</string>
    <string name="back"><u>Back</u>></string>
    <string name="ten_mon">Tên môn</string>
    <string name="_6a1">6A1</string>
    <string name="tai_du_lieu">Đang tải dữ liệu vui lòng chờ...</string>
    <string name="luu_thong_tin_dn">Lưu thông tin đăng nhập</string>
    <string name="maika_tutorial">Hãy nói \'Maika\' hoặc \'Xin chào MaiKa\'</string>
    <string name="hello_world">Hello World</string>
</resources>