<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hoc_sinh"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/padding_login"
                android:layout_marginTop="@dimen/small_login_padding"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_login"
            android:paddingEnd="@dimen/padding_login"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_login"
            android:visibility="visible"
            android:id="@+id/main_layout">
            <Button
                android:id="@+id/tkb_hs_btn"
                android:layout_width="@dimen/function_btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thoi_khoa_bieu"
                android:paddingBottom="@dimen/padding_login"
                android:paddingTop="@dimen/padding_login"/>
            <Button
                android:id="@+id/lhd_btn"
                android:layout_width="@dimen/function_btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teacher_lich_hoat_dong"
                android:paddingTop="@dimen/padding_login"
                android:paddingBottom="@dimen/padding_login"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tkb_hs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thoi_khoa_bieu"
                    android:textSize="@dimen/txt_size_lv3"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/big_padding"/>
                <TextView
                    android:id="@+id/back_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/txt_size_lv2"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small_login_padding"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thu"
                        android:textColor="@color/white"
                        android:padding="@dimen/small_login_padding"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@color/design_default_color_primary"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiet"
                        android:textColor="@color/white"
                        android:padding="@dimen/small_login_padding"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@color/design_default_color_primary"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mon"
                        android:textColor="@color/white"
                        android:background="@color/design_default_color_primary"
                        android:padding="@dimen/small_login_padding"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"/>
                </LinearLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="500dp">
                    <TableLayout
                        android:id="@+id/table_tkb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </TableLayout>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lct_hs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher_lich_hoat_dong"
                    android:textSize="@dimen/txt_size_lv3"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/big_padding"/>
                <TextView
                    android:id="@+id/back_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/txt_size_lv2"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/small_login_padding"/>

            </RelativeLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/table_lhd">
                    <TableRow>
                        <TextView
                            android:text="@string/thu"
                            android:textColor="@color/white"
                            android:padding="@dimen/small_login_padding"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@color/design_default_color_primary"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"/>
                        <TextView
                            android:text="@string/thoi_gian"
                            android:textColor="@color/white"
                            android:padding="@dimen/small_login_padding"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@color/design_default_color_primary"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"/>
                        <TextView
                            android:text="@string/noi_dung"
                            android:textColor="@color/white"
                            android:background="@color/design_default_color_primary"
                            android:padding="@dimen/small_login_padding"
                            android:layout_weight="6"
                            android:gravity="center"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"/>
                        <TextView
                            android:text="@string/to_chuc"
                            android:textColor="@color/white"
                            android:background="@color/design_default_color_primary"
                            android:padding="@dimen/small_login_padding"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:layout_marginStart="1dp"
                            android:layout_marginEnd="1dp"/>
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/padding_login"
                android:layout_marginBottom="@dimen/padding_login"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ten_hs_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_hoc_sinh"
                    android:textSize="@dimen/txt_size_lv2"
                    android:textColor="@color/design_default_color_primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_string"
                    android:textSize="@dimen/txt_size_lv2"
                    android:textColor="@color/design_default_color_primary"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"/>
                <TextView
                    android:id="@+id/ten_lop_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_lop"
                    android:textSize="@dimen/txt_size_lv2"
                    android:textColor="@color/design_default_color_primary"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>