<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maika_bot"
            android:textSize="@dimen/txt_size_lv5"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/login_margin_top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_login"
            android:paddingStart="@dimen/padding_login"
            android:paddingEnd="@dimen/padding_login">
            <TextView
                android:layout_width="@dimen/login_txt_title_width"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_lv2"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/username_edt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_login"
            android:paddingEnd="@dimen/padding_login">
            <TextView
                android:layout_width="@dimen/login_txt_title_width"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_lv2"
                android:textStyle="bold"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password_edt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_login">
            <Button
                android:id="@+id/login_btn"
                android:text="@string/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/login_btn_margin_end"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_login_padding">
            <TextView
                android:id="@+id/hint_text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:paddingStart="@dimen/padding_login"
                android:paddingEnd="@dimen/padding_login"
                android:paddingBottom="@dimen/small_login_padding"
                android:layout_centerInParent="true"
                android:textStyle="italic"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_as_guest_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_hint_text"
                android:textColor="@color/design_default_color_primary"
                android:paddingStart="@dimen/padding_login"
                android:paddingEnd="@dimen/padding_login"
                android:paddingBottom="@dimen/padding_login"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textStyle="italic"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.4"
        android:id="@+id/loading_layout">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="#80000000"
            android:src="@drawable/loading"
            android:id="@+id/loading_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tai_du_lieu"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/loading_icon"/>
    </RelativeLayout>
</RelativeLayout>