<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestActivity">
    <include
        layout="@layout/tini_bot_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/khach"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/padding_login"
                android:layout_marginTop="@dimen/small_login_padding"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_login"
            android:paddingEnd="@dimen/padding_login"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_login"
            android:visibility="visible">
            <Button
                android:id="@+id/hd_di_chuyen_btn"
                android:layout_width="@dimen/function_btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hd_di_chuyen"
                android:paddingBottom="@dimen/padding_login"
                android:paddingTop="@dimen/padding_login"/>
            <Button
                android:id="@+id/gap_mat_btn"
                android:layout_width="@dimen/function_btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gap_mat"
                android:paddingTop="@dimen/padding_login"
                android:paddingBottom="@dimen/padding_login"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/hd_duong_di_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_login_padding"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dia_diem_hien_tai"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="@dimen/txt_size_lv2"/>
                <Spinner
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_place"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="@dimen/txt_size_lv2"/>
                <Spinner
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/end_place"
                    android:layout_weight="1"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_login">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mo_ta"
                    android:textSize="@dimen/txt_size_lv3"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/big_padding"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/desciption_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:textSize="@dimen/txt_size_lv2"
                android:paddingStart="@dimen/big_padding"
                android:paddingEnd="@dimen/big_padding"
                android:layout_marginTop="@dimen/small_login_padding"
                android:textColor="@color/black"/>
            <RelativeLayout
                android:id="@+id/map_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/so_do_nha_truong"
                    android:layout_alignParentTop="true"/>
                <ImageView
                    android:id="@+id/start_point"
                    android:layout_width="@dimen/point_size"
                    android:layout_height="@dimen/point_size"
                    android:src="@drawable/start"
                    android:layout_marginTop="@dimen/location_nha_hieu_bo_top"
                    android:layout_marginStart="@dimen/location_nha_hieu_bo_left"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/destination_point"
                    android:layout_width="@dimen/point_size"
                    android:layout_height="@dimen/point_size"
                    android:src="@drawable/destination"
                    android:visibility="gone"/>

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gap_mat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_login_padding"
            android:orientation="vertical"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/big_padding"
                android:layout_marginEnd="@dimen/big_padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/can_bo_can_gap"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="@dimen/txt_size_lv2"/>
                <Spinner
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ds_can_bo"
                    android:layout_weight="1"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_login">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thong_tin"
                    android:textSize="@dimen/txt_size_lv3"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/big_padding"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/thong_tin_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:textSize="@dimen/txt_size_lv2"
                android:paddingStart="@dimen/big_padding"
                android:paddingEnd="@dimen/big_padding"
                android:layout_marginTop="@dimen/small_login_padding"
                android:textColor="@color/black"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/padding_login"
                android:layout_marginBottom="@dimen/padding_login"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ten_hs_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/k_nh_ch_o_qu_kh_ch"
                    android:textSize="@dimen/txt_size_lv2"
                    android:textColor="@color/design_default_color_primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/txt_size_lv2"
                    android:textColor="@color/design_default_color_primary"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"/>
                <TextView
                    android:id="@+id/ten_lop_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/txt_size_lv2"
                    android:textColor="@color/design_default_color_primary"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_login"
            android:paddingEnd="@dimen/padding_login"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_login"
            android:visibility="visible">
            <Button
                android:id="@+id/tim_duong_di_btn"
                android:layout_width="@dimen/function_btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tim_duong_di"
                android:paddingBottom="@dimen/padding_login"
                android:paddingTop="@dimen/padding_login"/>
            <Button
                android:layout_width="@dimen/function_btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gap_can_bo"
                android:paddingTop="@dimen/padding_login"
                android:paddingBottom="@dimen/padding_login"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>